# a1phan.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
post/: archlinux.md  hello.md  home_server.md  nftables.md  router.md  swift.md  yew.md
post/kubernetes/: index.md
post/router/: index.md
post/ssh_cli/: index.md
src/: main.rs  types.rs  utils.rs
src/components/: layout.rs  markdown.rs  meta.rs  mod.rs  paginator.rs
src/router/: about.rs  home.rs  mod.rs  not_found.rs  posts.rs
src/router/posts/: list.rs  mod.rs  post.rs  posts.rs
style/: index.scss
