[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["wasmbind"] }
gloo-net = "0.2"
js-sys = "0.3.64"
markdown = "1.0.0-alpha.10"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
